# sentio

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  test_requirements.txt  wsgi.py
.github/workflows/: containerization.yml  deploy.yml  sentio.yml  test.yml
app/: Dockerfile
mysql/: Dockerfile  fly.toml
scripts/: conf_editor.sh
sentio/: app.py  db.py  requirements.txt
sentio/auth/: auth.py
sentio/auth/static/: script.js  style.css
sentio/auth/templates/: login.html  register.html
sentio/blog/: blog.py
sentio/blog/static/: style.css
sentio/blog/templates/: get_post.html  post.html
sentio/static/: style.css
sentio/templates/: home.html  index.html  loggedin.html  loggedout.html
tests/: conftest.py  test_auth.py  test_blog.py  test_data  test_db.py
verba/: .gitignore  app.py  db.py  metadata.py  requirements.txt
verba/auth/: auth.py  email_auth.py  forgotpassword.py  profile.py
verba/auth/static/: profile.css  profile.js  style.css
verba/auth/static/js/: profile.js  script.js
verba/auth/templates/: changepassword.html  forgotpassword.html  login.html  passwordreset.html  profile.html  register.html  verify.html
verba/blog/: blog.py  uploads.py  verify.py
verba/blog/static/: script.js  style.css
verba/blog/static/js/: temp.js
verba/blog/templates/: get_post.html  post.html  update.html  write.html
verba/static/: nav.css  style.css
verba/static/styles/: buttons.css  content.css  nav.css  style.css
verba/templates/: home.html  index.html  loggedin.html  loggedin_mini.html  loggedout.html
(+5 files in other folders)
